Fixed makefile to build with -O3 flag correctly

--- a/back_propogation/code/makefile
+++ b/back_propogation/code/makefile
@@ -1,17 +1,8 @@
-CC=g++
-CFLAGS=-std=c++11 -O3
 EXEC=deep_learning_lab1
-FILES.C:=$(wildcard *.cpp)
-FILES.OBJ:=$(patsubst %.cpp, %.o, $(FILES.C))
-
 .PHONY: run clean
 
-%.o: %.c
-	@ echo "Compiling: $<"
-	@ $(CC) $(CFLAGS) -c $< -o $@
 $(EXEC): $(FILES.OBJ)
-	@ echo "Linking: $^"
-	@ $(CC) $^ -o $@
+	g++ -std=c++11 -O3 network.cpp utils.cpp main.cpp -o $@
 run:
 	@ ./$(EXEC)
 clean:
